# rizz-space-invaders

./: .gitignore  README.md
art/images/: make_enemies.bat  make_sprites.bat  sprites
assets/sprites/: game-sprites
build-vc16/: build-bundle.bat
src/: CMakeLists.txt  main.c
vscode/: space-invaders.code-workspace
